--- a/IndieHub.css
+++ b/IndieHub.css
@@ -1,8 +1,13 @@
-/* RESET E VARIÃVEIS */
+/* reset */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+@font-face {
+    font-family: arcade;
+    src: url(fonts/upheavtt.ttf);
 }
 
 :root {
@@ -32,6 +37,11 @@ body {
     padding: 0 20px;
 }
 
+.entretenimento {
+    font-family:arcade;
+    letter-spacing: 2px;
+}
+
 /* HEADER */
 .header {
     background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-primary-dark) 100%);
@@ -40,6 +50,8 @@ body {
     top: 0;
     z-index: 1000;
     border-bottom: 6px solid var(--color-primary-light);
+    font-family:arcade;
+    letter-spacing: 2px;
 }
 
 .header-content {
@@ -65,13 +77,22 @@ body {
 }
 
 .logo h1 {
+    display: flex;
+    align-items: center;
+    gap: 16px;
     color: var(--color-text);
-    font-size: 28px;
+    font-size: 32px;
     font-weight: 900;
     letter-spacing: 3px;
 }
 
+.logo img {
+    width: 64px;
+    height: 64px;
+}
+
 .main-nav {
+    font-size: 22px;
     display: flex;
     gap: 32px;
     margin-right: auto;
@@ -94,10 +115,6 @@ body {
     height: 4px;
     background: var(--color-primary);
     transition: width 0.3s;
-}
-
-.main-nav a:hover {
-    color: var(--color-primary);
 }
 
 .main-nav a:hover::after {
@@ -164,8 +181,7 @@ body {
 /* HERO BANNER */
 .hero {
     height: 600px;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), 
-                url('https://placeholder-image-url.jpg') center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('assets/silksongbanner.webp') center;
     background-color: var(--color-gray);
     display: flex;
     align-items: flex-end;
@@ -231,6 +247,8 @@ body {
     background: var(--color-dark);
     border-top: 5px solid var(--color-primary);
     border-bottom: 5px solid var(--color-primary);
+    font-family:arcade;
+    letter-spacing: 2px;
 }
 
 .intro h2 {
@@ -254,6 +272,8 @@ body {
     margin-bottom: 32px;
     padding-bottom: 16px;
     border-bottom: 5px solid var(--color-primary);
+    font-family:arcade;
+    letter-spacing: 2px;
 }
 
 .section-header h2 {
